--- a/app/backend/dockerfile
+++ b/app/backend/dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies for audio processing and Chrome
+# Install system dependencies for audio processing
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     wget \
@@ -12,20 +12,29 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Chrome for Selenium
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list \
-    && apt-get update \
-    && apt-get install -y google-chrome-stable \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install ChromeDriver
-RUN CHROMEDRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE` \
-    && wget -N http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip \
-    && unzip chromedriver_linux64.zip \
-    && rm chromedriver_linux64.zip \
-    && mv chromedriver /usr/local/bin/chromedriver \
-    && chmod +x /usr/local/bin/chromedriver
+# Install browser based on architecture
+RUN set -ex; \
+    # Detect architecture
+    ARCH=$(dpkg --print-architecture); \
+    if [ "$ARCH" = "amd64" ]; then \
+        # Install Google Chrome for AMD64
+        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+        && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list \
+        && apt-get update \
+        && apt-get install -y google-chrome-stable \
+        && rm -rf /var/lib/apt/lists/* \
+        && CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE) \
+        && wget -N http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip \
+        && unzip chromedriver_linux64.zip \
+        && rm chromedriver_linux64.zip \
+        && mv chromedriver /usr/local/bin/chromedriver \
+        && chmod +x /usr/local/bin/chromedriver; \
+    else \
+        # Install Chromium for ARM64 and other architectures
+        apt-get update \
+        && apt-get install -y chromium chromium-driver \
+        && rm -rf /var/lib/apt/lists/*; \
+    fi
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
