--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8001/models"]
       interval: 30s
       timeout: 10s
       retries: 3
