Refactor Ollama integration and remove unused services
- Updated `dev.sh` to use the main Ollama service instead of the Docker-specific service.
- Removed the `docker-compose.dev.yml` file and adjusted the main `docker-compose.yml` to eliminate the Ollama API wrapper service.
- Updated environment variable usage in the backend to reflect the new Ollama service structure.
- Cleaned up frontend code to remove references to the deprecated Ollama API URL.
- Deleted unused `setup_supabase_env.sh` and Ollama service files to streamline the project structure.

--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -30,6 +30,7 @@ beautifulsoup4==4.13.3
 feedparser==6.0.11
 requests==2.32.3
 selenium==4.31.0
+httpx==0.28.1
 
 # Document processing
 pymupdf==1.25.4
