--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,10 @@ SUPABASE_SERVICE_KEY=your-supabase-service-key-here
 
 # Frontend Build Variables (for Vite)
 # Note: Frontend env vars must be prefixed with VITE_
-VITE_SUPABASE_URL=${SUPABASE_URL}
-VITE_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+# Vite requires literal values, not shell variable references
+# Copy the same values from SUPABASE_URL and SUPABASE_ANON_KEY above
+VITE_SUPABASE_URL=your-supabase-url-here
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key-here
 
 # Environment
 ENVIRONMENT=development
