--- a/app/backend/fly.toml
+++ b/app/backend/fly.toml
@@ -1,31 +1,32 @@
-# fly.toml app configuration file for YODA Backend
+# fly.toml app configuration file generated for yoda-backend on 2025-12-02T19:38:07-08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "yoda-backend"
-primary_region = "iad"
+app = 'yoda-backend'
+primary_region = 'sjc'
 
 [build]
-  dockerfile = "Dockerfile"
+  dockerfile = 'Dockerfile'
 
 [env]
-  ENVIRONMENT = "production"
-  PORT = "8000"
+  ENVIRONMENT = 'production'
+  PORT = '8000'
 
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = "stop"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
   [[http_service.checks]]
-    interval = "30s"
-    timeout = "10s"
-    grace_period = "60s"
-    method = "GET"
-    path = "/health"
+    interval = '30s'
+    timeout = '10s'
+    grace_period = '1m0s'
+    method = 'GET'
+    path = '/health'
 
 [[vm]]
   memory = '1gb'
