Ollama Fly deployment: Refactor Dockerfile and fly.toml for improved startup and configuration
- Updated Dockerfile to create a startup script as the ENTRYPOINT for the Ollama server.
- Modified fly.toml to adjust the volume size for model storage and updated configuration comments for clarity.
- Ensured consistent use of single quotes in the fly.toml file for better readability.

--- a/ollama-fly/Dockerfile
+++ b/ollama-fly/Dockerfile
@@ -6,5 +6,10 @@ EXPOSE 11434
 # Set environment variable to listen on all interfaces
 ENV OLLAMA_HOST=0.0.0.0
 
-# Start Ollama server
-CMD ["/bin/ollama", "serve"]
+# Create a startup script that will be our ENTRYPOINT
+RUN echo '#!/bin/sh' > /start.sh && \
+    echo 'exec /bin/ollama serve' >> /start.sh && \
+    chmod +x /start.sh
+
+# Set the script as ENTRYPOINT to completely override base image
+ENTRYPOINT ["/start.sh"]
