--- a/ollama-fly/fly.toml
+++ b/ollama-fly/fly.toml
@@ -1,25 +1,27 @@
-app = "yoda-ollama"
-primary_region = "sjc"
+# fly.toml app configuration file generated for yoda-ollama on 2025-12-02T20:04:48-08:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'yoda-ollama'
+primary_region = 'sjc'
 
 [build]
-  dockerfile = "Dockerfile"
+  dockerfile = 'Dockerfile'
 
 [env]
-  OLLAMA_HOST = "0.0.0.0"
+  OLLAMA_HOST = '0.0.0.0'
+
+[[mounts]]
+  source = 'ollama_data'
+  destination = '/root/.ollama'
+  initial_size = '5gb'
 
 [http_service]
   internal_port = 11434
-  force_https = false
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
 
 [[vm]]
-  memory = '8gb'
-  cpu_kind = 'performance'
-  cpus = 2
-
-[mounts]
-  source = "ollama_data"
-  destination = "/root/.ollama"
-  initial_size = "20gb"
+  size = 'performance-1x'
