--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -3,44 +3,31 @@ fastapi==0.115.11
 uvicorn==0.34.0
 pydantic==2.10.6
 python-dotenv==1.0.1
+python-multipart==0.0.6
 
 # NumPy version constraint to avoid compatibility issues
 numpy<2
 
-# PyTorch (compatible with NumPy 1.x)
+# PyTorch - required by Whisper (CPU version will be auto-selected if no GPU)
 torch
-torchvision
-torchaudio
-
-# AI and ML dependencies
-openai==1.65.5
 openai-whisper
 
-# LangChain with updated packages (no deprecated imports)
+# LangChain for embeddings and text splitting
 langchain==0.3.21
 langchain-huggingface
 langchain-community
 
-# Embeddings and vector search
-sentence-transformers==3.4.1
-faiss-cpu==1.10.0
+# Embeddings (sentence-transformers is a dependency of langchain-huggingface)
+# No need to specify separately
 
 # Web scraping and processing
 beautifulsoup4==4.13.3
 feedparser==6.0.11
 requests==2.32.3
-selenium==4.31.0
-httpx==0.28.1
 
 # Document processing
-pymupdf==1.25.4
 yt-dlp
 youtube-transcript-api==0.6.3
-
-# Additional dependencies
-setuptools
-urllib3<2
-python-multipart==0.0.6
 
 # Authentication
 python-jose[cryptography]==3.3.0
