--- a/app/backend/fly.toml
+++ b/app/backend/fly.toml
@@ -12,13 +12,15 @@ primary_region = 'sjc'
 [env]
   ENVIRONMENT = 'production'
   PORT = '8000'
+  # Set FRONTEND_URL secret to allow CORS from frontend:
+  # fly secrets set FRONTEND_URL="https://yoda-frontend.fly.dev" --app yoda-backend
 
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
 
   [[http_service.checks]]
