--- a/app/frontend/fly.toml
+++ b/app/frontend/fly.toml
@@ -7,6 +7,10 @@ primary_region = "iad"
 
 [build]
   dockerfile = "Dockerfile"
+  # Build args must be passed during deployment:
+  # fly deploy --build-arg VITE_API_BASE_URL="https://yoda-backend.fly.dev" \
+  #            --build-arg VITE_SUPABASE_URL="your-supabase-url" \
+  #            --build-arg VITE_SUPABASE_ANON_KEY="your-anon-key"
 
 [env]
   PORT = "80"
@@ -14,9 +18,9 @@ primary_region = "iad"
 [http_service]
   internal_port = 80
   force_https = true
-  auto_stop_machines = "stop"
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ["app"]
 
   [[http_service.checks]]
