--- a/ollama-fly/fly.toml
+++ b/ollama-fly/fly.toml
@@ -19,9 +19,9 @@ primary_region = 'sjc'
 
 [http_service]
   internal_port = 11434
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
 
 [[vm]]
   size = 'performance-1x'
