Update deployment configurations and remove outdated guides
- Added `.env.production` to the `.gitignore` to prevent sensitive data exposure.
- Deleted `DEPLOYMENT_GUIDE.md` and `SAFE_REDEPLOY.md` as part of a cleanup effort.
- Updated `fly.toml` files for backend and frontend to enhance CORS configuration and adjust machine auto-stop settings.
- Improved backend and frontend code to support dynamic CORS origins and refined API base URL handling.
- Ensured that environment variables are correctly set for production deployments.

--- a/app/backend/fly.toml
+++ b/app/backend/fly.toml
@@ -12,6 +12,8 @@ primary_region = 'sjc'
 [env]
   ENVIRONMENT = 'production'
   PORT = '8000'
+  # OLLAMA_BASE_URL will be set via secrets to use Fly.io private networking
+  # Set via: fly secrets set OLLAMA_BASE_URL="http://yoda-ollama.internal:11434" --app yoda-backend
   # Set FRONTEND_URL secret to allow CORS from frontend:
   # fly secrets set FRONTEND_URL="https://yoda-frontend.fly.dev" --app yoda-backend
 
