--- a/.gitignore
+++ b/.gitignore
@@ -254,6 +254,7 @@ jspm_packages/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 .env.local
 
 # parcel-bundler cache
