Optimize backend deployment by removing Whisper model to reduce size constraints and adjusting resource allocations in fly.toml files. Updated requirements.txt to reflect the removal of Whisper dependencies. Enhanced logging to indicate transcription is disabled in this deployment.

--- a/app/backend/fly.toml
+++ b/app/backend/fly.toml
@@ -36,3 +36,7 @@ primary_region = 'sjc'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  size = 'performance-2x'
+
+# Cost optimization: Backend needs to stay running due to model loading
+# but we can reduce to minimum machines
