--- a/app/frontend/fly.toml
+++ b/app/frontend/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 
 app = "yoda-frontend"
-primary_region = "iad"
+primary_region = "sjc"
 
 [build]
   dockerfile = "Dockerfile"
@@ -32,6 +32,6 @@ primary_region = "iad"
     path = "/health"
 
 [[vm]]
-  memory = '512mb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
